--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,5 @@
 *.csv
 tests/matrix/build/*
 cfd_mx/build/*
-cfd_mx/build
-cfd_mx/build/CMakeFiles/FindOpenMP/ompver_CXX.bin
-cfd_mx/build/CMakeFiles/FindOpenMP/ompver_C.bin
+.idea/*
+.vscode/*
